--- a/styles/style.scss
+++ b/styles/style.scss
@@ -41,6 +41,7 @@ main{
     flex: 1;
     order: 2;
     text-align: right;
+    cursor: pointer;
 }
 
 .timer{
@@ -112,6 +113,10 @@ main{
     transition: background-color 0.25s;
 }
 
+.game__box--guess{
+    cursor: pointer;
+}
+
 .desc{
     margin-top:55px;
     color:#fff;
@@ -129,6 +134,7 @@ main{
         color:$accent-color;
         text-decoration: none;
         font-weight:600;
+        cursor:pointer;
     }
 }
 
@@ -218,6 +224,7 @@ main{
     right: 15px;
     top: 15px;
     fill:white;
+    cursor: pointer;
 }
 
 .form__status{
